--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-cloudfront": "^1.97.0",
-    "@aws-cdk/aws-cloudfront-origins": "^1.97.0",
-    "@aws-cdk/aws-s3": "^1.97.0",
-    "@aws-cdk/aws-s3-deployment": "^1.97.0",
+    "@aws-cdk/aws-apigateway": "1.97.0",
+    "@aws-cdk/aws-cloudfront": "1.97.0",
+    "@aws-cdk/aws-cloudfront-origins": "1.97.0",
+    "@aws-cdk/aws-dynamodb": "1.97.0",
+    "@aws-cdk/aws-lambda": "1.97.0",
+    "@aws-cdk/aws-lambda-python": "^1.97.0",
+    "@aws-cdk/aws-s3": "1.97.0",
+    "@aws-cdk/aws-s3-deployment": "1.97.0",
+    "@aws-cdk/aws-iam": "1.97.0",
     "@aws-cdk/core": "1.97.0",
     "source-map-support": "^0.5.16"
   }
